// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src | components | pages | my-bookings | MyBookingsLists when I have just booking of the week should render booking of the week 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MyBookingsLists
    bookingsOfTheWeek={
      Array [
        Object {
          "id": "b1",
        },
      ]
    }
    finishedAndUsedAndCancelledBookings={Array []}
    isEmpty={false}
    upComingBookings={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="teaser-main-title"
        >
          Réservations
        </h1>,
        false,
        <section
          className="mb-section"
        >
          <h2
            className="mb-subtitle"
          >
            Cette semaine
          </h2>
          <BookingsList
            bookings={
              Array [
                Object {
                  "id": "b1",
                },
              ]
            }
            shouldDisplayToken={true}
          />
        </section>,
        <section
          className="mb-section"
        >
          <div
            className="mb-info-picto"
          >
            <Icon
              alt="erreur"
              className=""
              svg="ico-info-white"
            />
          </div>
          <p
            className="mb-infos"
          >
            Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
          </p>
        </section>,
        false,
        false,
      ],
      "className": "teaser-page",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Réservations",
          "className": "teaser-main-title",
        },
        "ref": null,
        "rendered": "Réservations",
        "type": "h1",
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="mb-subtitle"
            >
              Cette semaine
            </h2>,
            <BookingsList
              bookings={
                Array [
                  Object {
                    "id": "b1",
                  },
                ]
              }
              shouldDisplayToken={true}
            />,
          ],
          "className": "mb-section",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Cette semaine",
              "className": "mb-subtitle",
            },
            "ref": null,
            "rendered": "Cette semaine",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bookings": Array [
                Object {
                  "id": "b1",
                },
              ],
              "shouldDisplayToken": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "section",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="mb-info-picto"
            >
              <Icon
                alt="erreur"
                className=""
                svg="ico-info-white"
              />
            </div>,
            <p
              className="mb-infos"
            >
              Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
            </p>,
          ],
          "className": "mb-section",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Icon
                alt="erreur"
                className=""
                svg="ico-info-white"
              />,
              "className": "mb-info-picto",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alt": "erreur",
                "className": "",
                "svg": "ico-info-white",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
              "className": "mb-infos",
            },
            "ref": null,
            "rendered": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
            "type": "p",
          },
        ],
        "type": "section",
      },
      false,
      false,
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="teaser-main-title"
          >
            Réservations
          </h1>,
          false,
          <section
            className="mb-section"
          >
            <h2
              className="mb-subtitle"
            >
              Cette semaine
            </h2>
            <BookingsList
              bookings={
                Array [
                  Object {
                    "id": "b1",
                  },
                ]
              }
              shouldDisplayToken={true}
            />
          </section>,
          <section
            className="mb-section"
          >
            <div
              className="mb-info-picto"
            >
              <Icon
                alt="erreur"
                className=""
                svg="ico-info-white"
              />
            </div>
            <p
              className="mb-infos"
            >
              Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
            </p>
          </section>,
          false,
          false,
        ],
        "className": "teaser-page",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Réservations",
            "className": "teaser-main-title",
          },
          "ref": null,
          "rendered": "Réservations",
          "type": "h1",
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="mb-subtitle"
              >
                Cette semaine
              </h2>,
              <BookingsList
                bookings={
                  Array [
                    Object {
                      "id": "b1",
                    },
                  ]
                }
                shouldDisplayToken={true}
              />,
            ],
            "className": "mb-section",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Cette semaine",
                "className": "mb-subtitle",
              },
              "ref": null,
              "rendered": "Cette semaine",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bookings": Array [
                  Object {
                    "id": "b1",
                  },
                ],
                "shouldDisplayToken": true,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "section",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="mb-info-picto"
              >
                <Icon
                  alt="erreur"
                  className=""
                  svg="ico-info-white"
                />
              </div>,
              <p
                className="mb-infos"
              >
                Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
              </p>,
            ],
            "className": "mb-section",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Icon
                  alt="erreur"
                  className=""
                  svg="ico-info-white"
                />,
                "className": "mb-info-picto",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "alt": "erreur",
                  "className": "",
                  "svg": "ico-info-white",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
                "className": "mb-infos",
              },
              "ref": null,
              "rendered": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
              "type": "p",
            },
          ],
          "type": "section",
        },
        false,
        false,
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`src | components | pages | my-bookings | MyBookingsLists when I have just finished/cancelled bookings should render finished/used/cancelled bookings 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MyBookingsLists
    bookingsOfTheWeek={Array []}
    finishedAndUsedAndCancelledBookings={
      Array [
        Object {
          "id": "b1",
        },
        Object {
          "id": "b2",
        },
      ]
    }
    isEmpty={false}
    upComingBookings={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="teaser-main-title"
        >
          Réservations
        </h1>,
        false,
        false,
        <section
          className="mb-section"
        >
          <div
            className="mb-info-picto"
          >
            <Icon
              alt="erreur"
              className=""
              svg="ico-info-white"
            />
          </div>
          <p
            className="mb-infos"
          >
            Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
          </p>
        </section>,
        false,
        <section
          className="mb-section"
        >
          <h2
            className="mb-subtitle"
          >
            Terminées
          </h2>
          <BookingsList
            bookings={
              Array [
                Object {
                  "id": "b1",
                },
                Object {
                  "id": "b2",
                },
              ]
            }
            shouldDisplayToken={false}
          />
        </section>,
      ],
      "className": "teaser-page",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Réservations",
          "className": "teaser-main-title",
        },
        "ref": null,
        "rendered": "Réservations",
        "type": "h1",
      },
      false,
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="mb-info-picto"
            >
              <Icon
                alt="erreur"
                className=""
                svg="ico-info-white"
              />
            </div>,
            <p
              className="mb-infos"
            >
              Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
            </p>,
          ],
          "className": "mb-section",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Icon
                alt="erreur"
                className=""
                svg="ico-info-white"
              />,
              "className": "mb-info-picto",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alt": "erreur",
                "className": "",
                "svg": "ico-info-white",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
              "className": "mb-infos",
            },
            "ref": null,
            "rendered": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
            "type": "p",
          },
        ],
        "type": "section",
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="mb-subtitle"
            >
              Terminées
            </h2>,
            <BookingsList
              bookings={
                Array [
                  Object {
                    "id": "b1",
                  },
                  Object {
                    "id": "b2",
                  },
                ]
              }
              shouldDisplayToken={false}
            />,
          ],
          "className": "mb-section",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Terminées",
              "className": "mb-subtitle",
            },
            "ref": null,
            "rendered": "Terminées",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bookings": Array [
                Object {
                  "id": "b1",
                },
                Object {
                  "id": "b2",
                },
              ],
              "shouldDisplayToken": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "section",
      },
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="teaser-main-title"
          >
            Réservations
          </h1>,
          false,
          false,
          <section
            className="mb-section"
          >
            <div
              className="mb-info-picto"
            >
              <Icon
                alt="erreur"
                className=""
                svg="ico-info-white"
              />
            </div>
            <p
              className="mb-infos"
            >
              Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
            </p>
          </section>,
          false,
          <section
            className="mb-section"
          >
            <h2
              className="mb-subtitle"
            >
              Terminées
            </h2>
            <BookingsList
              bookings={
                Array [
                  Object {
                    "id": "b1",
                  },
                  Object {
                    "id": "b2",
                  },
                ]
              }
              shouldDisplayToken={false}
            />
          </section>,
        ],
        "className": "teaser-page",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Réservations",
            "className": "teaser-main-title",
          },
          "ref": null,
          "rendered": "Réservations",
          "type": "h1",
        },
        false,
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="mb-info-picto"
              >
                <Icon
                  alt="erreur"
                  className=""
                  svg="ico-info-white"
                />
              </div>,
              <p
                className="mb-infos"
              >
                Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
              </p>,
            ],
            "className": "mb-section",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Icon
                  alt="erreur"
                  className=""
                  svg="ico-info-white"
                />,
                "className": "mb-info-picto",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "alt": "erreur",
                  "className": "",
                  "svg": "ico-info-white",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
                "className": "mb-infos",
              },
              "ref": null,
              "rendered": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
              "type": "p",
            },
          ],
          "type": "section",
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="mb-subtitle"
              >
                Terminées
              </h2>,
              <BookingsList
                bookings={
                  Array [
                    Object {
                      "id": "b1",
                    },
                    Object {
                      "id": "b2",
                    },
                  ]
                }
                shouldDisplayToken={false}
              />,
            ],
            "className": "mb-section",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Terminées",
                "className": "mb-subtitle",
              },
              "ref": null,
              "rendered": "Terminées",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bookings": Array [
                  Object {
                    "id": "b1",
                  },
                  Object {
                    "id": "b2",
                  },
                ],
                "shouldDisplayToken": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "section",
        },
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`src | components | pages | my-bookings | MyBookingsLists when I have just upcoming booking should render upcoming booking 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MyBookingsLists
    bookingsOfTheWeek={Array []}
    finishedAndUsedAndCancelledBookings={Array []}
    isEmpty={false}
    upComingBookings={
      Array [
        Object {
          "id": "b1",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="teaser-main-title"
        >
          Réservations
        </h1>,
        false,
        false,
        <section
          className="mb-section"
        >
          <div
            className="mb-info-picto"
          >
            <Icon
              alt="erreur"
              className=""
              svg="ico-info-white"
            />
          </div>
          <p
            className="mb-infos"
          >
            Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
          </p>
        </section>,
        <section
          className="mb-section"
        >
          <h2
            className="mb-subtitle"
          >
            À venir
          </h2>
          <BookingsList
            bookings={
              Array [
                Object {
                  "id": "b1",
                },
              ]
            }
            shouldDisplayToken={true}
          />
        </section>,
        false,
      ],
      "className": "teaser-page",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Réservations",
          "className": "teaser-main-title",
        },
        "ref": null,
        "rendered": "Réservations",
        "type": "h1",
      },
      false,
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="mb-info-picto"
            >
              <Icon
                alt="erreur"
                className=""
                svg="ico-info-white"
              />
            </div>,
            <p
              className="mb-infos"
            >
              Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
            </p>,
          ],
          "className": "mb-section",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Icon
                alt="erreur"
                className=""
                svg="ico-info-white"
              />,
              "className": "mb-info-picto",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alt": "erreur",
                "className": "",
                "svg": "ico-info-white",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
              "className": "mb-infos",
            },
            "ref": null,
            "rendered": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
            "type": "p",
          },
        ],
        "type": "section",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="mb-subtitle"
            >
              À venir
            </h2>,
            <BookingsList
              bookings={
                Array [
                  Object {
                    "id": "b1",
                  },
                ]
              }
              shouldDisplayToken={true}
            />,
          ],
          "className": "mb-section",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "À venir",
              "className": "mb-subtitle",
            },
            "ref": null,
            "rendered": "À venir",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bookings": Array [
                Object {
                  "id": "b1",
                },
              ],
              "shouldDisplayToken": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "section",
      },
      false,
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="teaser-main-title"
          >
            Réservations
          </h1>,
          false,
          false,
          <section
            className="mb-section"
          >
            <div
              className="mb-info-picto"
            >
              <Icon
                alt="erreur"
                className=""
                svg="ico-info-white"
              />
            </div>
            <p
              className="mb-infos"
            >
              Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
            </p>
          </section>,
          <section
            className="mb-section"
          >
            <h2
              className="mb-subtitle"
            >
              À venir
            </h2>
            <BookingsList
              bookings={
                Array [
                  Object {
                    "id": "b1",
                  },
                ]
              }
              shouldDisplayToken={true}
            />
          </section>,
          false,
        ],
        "className": "teaser-page",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Réservations",
            "className": "teaser-main-title",
          },
          "ref": null,
          "rendered": "Réservations",
          "type": "h1",
        },
        false,
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="mb-info-picto"
              >
                <Icon
                  alt="erreur"
                  className=""
                  svg="ico-info-white"
                />
              </div>,
              <p
                className="mb-infos"
              >
                Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
              </p>,
            ],
            "className": "mb-section",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Icon
                  alt="erreur"
                  className=""
                  svg="ico-info-white"
                />,
                "className": "mb-info-picto",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "alt": "erreur",
                  "className": "",
                  "svg": "ico-info-white",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
                "className": "mb-infos",
              },
              "ref": null,
              "rendered": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
              "type": "p",
            },
          ],
          "type": "section",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="mb-subtitle"
              >
                À venir
              </h2>,
              <BookingsList
                bookings={
                  Array [
                    Object {
                      "id": "b1",
                    },
                  ]
                }
                shouldDisplayToken={true}
              />,
            ],
            "className": "mb-section",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "À venir",
                "className": "mb-subtitle",
              },
              "ref": null,
              "rendered": "À venir",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bookings": Array [
                  Object {
                    "id": "b1",
                  },
                ],
                "shouldDisplayToken": true,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "section",
        },
        false,
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`src | components | pages | my-bookings | MyBookingsLists when I have no bookings should render NoItems 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MyBookingsLists
    bookingsOfTheWeek={Array []}
    finishedAndUsedAndCancelledBookings={Array []}
    isEmpty={true}
    upComingBookings={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="teaser-main-title"
        >
          Réservations
        </h1>,
        <NoItems
          sentence="Dès que tu auras réservé une offre, tu la retrouveras ici."
        />,
        false,
        false,
        false,
        false,
      ],
      "className": "teaser-page",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Réservations",
          "className": "teaser-main-title",
        },
        "ref": null,
        "rendered": "Réservations",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "sentence": "Dès que tu auras réservé une offre, tu la retrouveras ici.",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
      false,
      false,
      false,
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="teaser-main-title"
          >
            Réservations
          </h1>,
          <NoItems
            sentence="Dès que tu auras réservé une offre, tu la retrouveras ici."
          />,
          false,
          false,
          false,
          false,
        ],
        "className": "teaser-page",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Réservations",
            "className": "teaser-main-title",
          },
          "ref": null,
          "rendered": "Réservations",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "sentence": "Dès que tu auras réservé une offre, tu la retrouveras ici.",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        false,
        false,
        false,
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`src | components | pages | my-bookings | MyBookingsLists when I have one booking at least should render information about "contremarque" 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MyBookingsLists
    bookingsOfTheWeek={
      Array [
        Object {
          "id": "b1",
        },
      ]
    }
    finishedAndUsedAndCancelledBookings={Array []}
    isEmpty={false}
    upComingBookings={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="teaser-main-title"
        >
          Réservations
        </h1>,
        false,
        <section
          className="mb-section"
        >
          <h2
            className="mb-subtitle"
          >
            Cette semaine
          </h2>
          <BookingsList
            bookings={
              Array [
                Object {
                  "id": "b1",
                },
              ]
            }
            shouldDisplayToken={true}
          />
        </section>,
        <section
          className="mb-section"
        >
          <div
            className="mb-info-picto"
          >
            <Icon
              alt="erreur"
              className=""
              svg="ico-info-white"
            />
          </div>
          <p
            className="mb-infos"
          >
            Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
          </p>
        </section>,
        false,
        false,
      ],
      "className": "teaser-page",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Réservations",
          "className": "teaser-main-title",
        },
        "ref": null,
        "rendered": "Réservations",
        "type": "h1",
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="mb-subtitle"
            >
              Cette semaine
            </h2>,
            <BookingsList
              bookings={
                Array [
                  Object {
                    "id": "b1",
                  },
                ]
              }
              shouldDisplayToken={true}
            />,
          ],
          "className": "mb-section",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Cette semaine",
              "className": "mb-subtitle",
            },
            "ref": null,
            "rendered": "Cette semaine",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bookings": Array [
                Object {
                  "id": "b1",
                },
              ],
              "shouldDisplayToken": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "section",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="mb-info-picto"
            >
              <Icon
                alt="erreur"
                className=""
                svg="ico-info-white"
              />
            </div>,
            <p
              className="mb-infos"
            >
              Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
            </p>,
          ],
          "className": "mb-section",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Icon
                alt="erreur"
                className=""
                svg="ico-info-white"
              />,
              "className": "mb-info-picto",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alt": "erreur",
                "className": "",
                "svg": "ico-info-white",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
              "className": "mb-infos",
            },
            "ref": null,
            "rendered": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
            "type": "p",
          },
        ],
        "type": "section",
      },
      false,
      false,
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="teaser-main-title"
          >
            Réservations
          </h1>,
          false,
          <section
            className="mb-section"
          >
            <h2
              className="mb-subtitle"
            >
              Cette semaine
            </h2>
            <BookingsList
              bookings={
                Array [
                  Object {
                    "id": "b1",
                  },
                ]
              }
              shouldDisplayToken={true}
            />
          </section>,
          <section
            className="mb-section"
          >
            <div
              className="mb-info-picto"
            >
              <Icon
                alt="erreur"
                className=""
                svg="ico-info-white"
              />
            </div>
            <p
              className="mb-infos"
            >
              Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
            </p>
          </section>,
          false,
          false,
        ],
        "className": "teaser-page",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Réservations",
            "className": "teaser-main-title",
          },
          "ref": null,
          "rendered": "Réservations",
          "type": "h1",
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="mb-subtitle"
              >
                Cette semaine
              </h2>,
              <BookingsList
                bookings={
                  Array [
                    Object {
                      "id": "b1",
                    },
                  ]
                }
                shouldDisplayToken={true}
              />,
            ],
            "className": "mb-section",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Cette semaine",
                "className": "mb-subtitle",
              },
              "ref": null,
              "rendered": "Cette semaine",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bookings": Array [
                  Object {
                    "id": "b1",
                  },
                ],
                "shouldDisplayToken": true,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "section",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="mb-info-picto"
              >
                <Icon
                  alt="erreur"
                  className=""
                  svg="ico-info-white"
                />
              </div>,
              <p
                className="mb-infos"
              >
                Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.
              </p>,
            ],
            "className": "mb-section",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Icon
                  alt="erreur"
                  className=""
                  svg="ico-info-white"
                />,
                "className": "mb-info-picto",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "alt": "erreur",
                  "className": "",
                  "svg": "ico-info-white",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
                "className": "mb-infos",
              },
              "ref": null,
              "rendered": "Le code de réservation à 6 caractères est votre preuve d’achat. Ne communiquez ce code qu’au moment du retrait de votre commande.",
              "type": "p",
            },
          ],
          "type": "section",
        },
        false,
        false,
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
